# Inventory-manager-cmd-app

InventorySystem/: CMakeLists.txt  Makefile  main.cpp
InventorySystem/include/: csv_utils.h  inventory_manager.h  item.h
InventorySystem/src/: csv_utils.cpp  inventory_manager.cpp  item.cpp
